moving tracking button outside of info container to avoid getting wrapped in new relative container

--- a/src/app/records/Record.m.scss
+++ b/src/app/records/Record.m.scss
@@ -36,31 +36,6 @@
   }
 }
 
-.glow {
-  display: none;
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-}
-
-.trackedInDim .glow {
-  display: block;
-  background: linear-gradient(
-    scale-color($orange, $alpha: -100%) 0%,
-    scale-color($orange, $alpha: -80%) 100%
-  );
-}
-
-.redeemed.gildingTriumph .glow {
-  display: block;
-  background: linear-gradient(
-    scale-color($gilded-triumph-border-color, $alpha: -100%) 80%,
-    scale-color($gilded-triumph-border-color, $alpha: -90%) 100%
-  );
-}
-
 .obscured h3 {
   color: #a1a2a2;
 }
@@ -96,6 +71,7 @@
   position: relative;
   border-color: #f37423;
   outline: 1px solid #f37423;
+  background: transparent;
 }
 
 .gildingTriumph {
@@ -138,6 +114,31 @@
     );
 }
 
+.glow {
+  display: none;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.trackedInDim .glow {
+  display: block;
+  background: linear-gradient(
+    scale-color($orange, $alpha: -100%) 0%,
+    scale-color($orange, $alpha: -80%) 100%
+  );
+}
+
+.redeemed.gildingTriumph .glow {
+  display: block;
+  background: linear-gradient(
+    scale-color($gilded-triumph-border-color, $alpha: -100%) 80%,
+    scale-color($gilded-triumph-border-color, $alpha: -90%) 100%
+  );
+}
+
 .redeemed .gildingText {
   opacity: 0.5;
 }
@@ -169,9 +170,6 @@
     display: block;
     opacity: 1;
     top: -10px;
-  }
-  .gildingTriumph & {
-    top: -22px;
   }
   .triumphRecord:hover & {
     display: block;
